--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body{
     justify-content: center;
     align-items: center;
     /* background:linear-gradient(to right,rgba(255, 0, 0, 0.548), rgba(49, 184, 202, 0.781)); */
-    background: url(./image/desktop-wallpaper-live-weather-for-pc-group.jpg) no-repeat center;
+    background: url(./image/desktop-wallpaper-live-weather-for-pc-group.jpg) ;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     
 }
@@ -21,8 +23,7 @@ body{
     border-radius: 20px;
     /* background-color: rgba(10, 11, 11, 0.911); */
     background:linear-gradient(to right, rgb(59, 58, 58),rgba(0, 0, 0, 0.525));
-    
-    text-align: center;
+     text-align: center;
     
 }
 .search{
